# django-custom-login-register

./: README.md  pyproject.toml
app/: db.sqlite3
app/app/: settings.py  urls.py
app/login/: forms.py  models.py  urls.py  views.py
app/login/migrations/: 0001_initial.py
app/templates/: base.html  login.html  register.html
custom_login_form/: scripts.py
