[tool.poetry]
name = "custom_login_form"
version = "0.1.0"
description = ""
authors = ["bagus <bagusssyamsu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
crispy-bootstrap5 = "^0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
